# orbitpy

./: .gitignore  .gitmodules  Makefile  OClog.txt  README.md  setup.py  temp.py
TBD/: Makefile
TBD/oci/: j2_analytical_propagator.cpp  oci_utils.h  pnt_opts_with_gp_in_fov_cov_calc.cpp
docs/: api_reference.rst  conf.py  development.rst  examples.rst  examples.rst.depriciated  external_validation.rst  index.rst  installation.rst  miscellaneous.rst  module_constellation.rst  module_contactfinder.rst  module_coveragecalculator.rst  module_datametricscalculator.rst  module_eclipsefinder.rst  module_grid.rst  module_mission.rst  module_propagator.rst  module_sensorpixelprojection.rst  module_util.rst  orbitpy.communications.rst  orbitpy.constellation.rst  orbitpy.constellation_module.rst  orbitpy.contactfinder_module.rst  orbitpy.coveragecalculator_module.rst  orbitpy.datametricscalculator.rst  orbitpy.eclipsefinder.rst  orbitpy.eclipsefinder_module.rst  orbitpy.grid.rst  orbitpy.grid_module.rst  orbitpy.mission_module.rst  orbitpy.obsdatametrics.rst  orbitpy.orbitpropcov.rst  orbitpy.preprocess.rst  orbitpy.propagator.rst  orbitpy.propagator_module.rst  orbitpy.rst  orbitpy.sensorpixelprojection_module.rst  orbitpy.util.rst  orbitpy.util_module.rst  output_data_file_desc.rst  (+8 more)
docs/_templates/: classes_template.rst  functions_template.rst  modules_template.rst
examples/20211111_SMAP/: smap.xml
examples/cygnss_gnssr/: CYGNSS.txt  GPS.txt  Galelio.txt  cygnss_coverage.py
examples/example1/: groundStations
examples/example10/: groundStations
examples/example12/: ISS_GMAT_script.script  ISS_orbital_elements.xml  MissionSpecs.json  sentinel1A_GMAT_script.script  sentinel1A_orbital_elements.xml  sentinel1B_GMAT_script.script
examples/example2/: MissionSpecs.json
examples/example7/: MissionSpecs.json
examples/example9/: covGrid
examples/gnssr_conus/: Beidou.txt  CYGNSS.txt  GPS.txt  Galelio.txt  Grid_WLFP_Day_1_Aug_1_2020.csv  main_script.py  map_plot.py  postprocess.py
examples/landsat_seahawk_1/: MissionSpecs.json
examples/landsat_seahawk_2/: assets.json  landsat_seahawk.py
examples/mission_1/: MissionSpecs.json
examples/mission_2/: MissionSpecs.json
oc/: Makefile
oci/: Makefile  genCovGrid.cpp  gp_in_fov_cov_calc.cpp  j2_analytical_propagator.cpp  orbitpropcov_grid.cpp  orbitpropcov_popts.cpp  pnt_axis_sphere_intsec_cov_calc.cpp  sensor_fov_projector.cpp
orbitpy/: Makefile  OClog.txt  README.md  constellation.py  contactfinder.py  coveragecalculator.py  datametricscalculator.py  eclipsefinder.py  grid.py  mission.py  orbitpropcov.py  preprocess.py  propagator.py  sensorpixelprojection.py  setup.py  util.py
propcov/: CMakeLists.txt  MacOS_CMakeLists.txt  Makefile  README.md  setup.py  setup2.py
propcov/docs/: propcov-cpp.docx  propcov-cpp_description.docx
propcov/docs/tatc_docs/: Orbit & Coverage design doc 1890325 v1.2.docx  TAT-C O&C walkthrough.pptx
propcov/lib/: Makefile
propcov/lib/gmatutil/: CMakeLists.txt
propcov/lib/gmatutil/util/: GmatGlobal.hpp
propcov/lib/propcov-cpp/: AbsoluteDate.cpp  AbsoluteDate.hpp  Attitude.cpp  Attitude.hpp  CMakeLists.txt  ConicalSensor.cpp  ConicalSensor.hpp  CoverageChecker.cpp  CoverageChecker.hpp  CoverageCheckerLegacy.cpp  CoverageCheckerLegacy.hpp  CustomSensor.cpp  CustomSensor.hpp  DiscretizedSensor.cpp  Earth.cpp  Earth.hpp  GMATCustomSensor.cpp  GMATCustomSensor.hpp  Grid.cpp  Grid.hpp  GridFilter.cpp  GridFilter.hpp  HelicalGrid.cpp  HelicalGrid.hpp  HorizonFilter.cpp  HorizonFilter.hpp  IntervalEventReport.hpp  KeyValueStatistics.cpp  KeyValueStatistics.hpp  LinearAlgebra.cpp  LinearAlgebra.hpp  Makefile  NadirPointingAttitude.cpp  NadirPointingAttitude.hpp  OrbitState.cpp  OrbitState.hpp  PointGroup.cpp  PointGroup.hpp  Projector.cpp  Projector.hpp  (+13 more)
propcov/lib/propcov-cpp/polygon/: DSPIPCustomSensor.cpp  DSPIPCustomSensor.hpp  Edge.cpp  Edge.hpp  GMATPolygon.cpp  GMATPolygon.hpp  Makefile  PointInPolygon.cpp  Polygon.cpp  Polygon.hpp  SliceArray.cpp  SliceTree.hpp  SlicedPolygon.cpp  SlicedPolygon.hpp  SphericalSensor.cpp  SphericalSensor.hpp  frame.hpp  readme
propcov/src/: Rvector_py.cpp  main.cpp  outer_Rvector.cpp  test.py
propcov/tests/: Makefile
propcov/tests/tests-cpp/: Makefile  SystemTest_Analysis.cpp  TestAbsoluteDate.cpp  TestConicalSensor.cpp  TestCustomSensor.cpp  TestDSPIPCustomSensor.cpp  TestDiscretizedSensor.cpp  TestEarth.cpp  TestGMATCustomSensor.cpp  TestOrbitState.cpp  TestPointGroup.cpp  TestProjector.cpp  TestPropagator.cpp  TestRectangularSensor.cpp  TestSensor.cpp  TestSliceArray.cpp  TestSliceTree.cpp  TestSliceTree_2.cpp  TestSliceTree_5.cpp  TestSlicedPolygon.cpp  TestSlicedPolygon_2.cpp  TestSlicedPolygon_4.cpp
propcov/tests/tests-cpp/new/: TestProjector.cpp
propcov/tests/tests-cpp/old/: CustomSensorTestClass.cpp  MakefileCustomSensor  MakefileLineIntersect  MakefileLineIntersect_noPlots  MakefilePointGroup  Makefile_RectangularSensorTest  TestBoxSensor.cpp  TestCustomSensor.cpp  TestSystemMike.cpp
rm/: Makefile
tests/: README.MD  test_constellation.py  test_contactfinder.py  test_coveragecalculator.py  test_datametricscalculator.py  test_eclipsefinder.py  test_grid.py  test_mission.py  test_propagator.py  test_util.py  util.py
util/: coverage.py
(+595 files in other folders)
